# rust_tracy_client

./: .gitignore  .gitmodules  Cargo.toml  FEATURES.mkd  README.mkd  make_sys.sh
.github/workflows/: sys-update.yml  test.yml  tracing-tracy.yml  tracy-client-sys.yml  tracy-client.yml
examples/: Cargo.toml  README.mkd
examples/src/: fibers.rs  main.rs
examples/src/plots/: mod.rs
examples/src/secondary_frames/: mod.rs
examples/src/threads/: mod.rs
examples/src/wgpu_frame_images/: blit.wgsl  mod.rs  triangle.wgsl
examples/src/zones/: mod.rs
tracing-tracy/: Cargo.toml
tracing-tracy/src/: buffers.rs  config.rs  fmt.rs  lib.rs  tests.rs
tracy-client/: Cargo.toml
tracy-client-sys/: Cargo.toml  FEATURES.mkd  build.rs  tests.rs
tracy-client-sys/src/: dbghelp.rs  generated.rs  generated_cuda.rs  generated_fibers.rs  generated_manual_lifetime.rs  lib.rs
tracy-client/benches/: client.rs  state.rs
tracy-client/examples/: showcase.rs
tracy-client/src/: demangle.rs  frame.rs  gpu.rs  lib.rs  lock.rs  plot.rs  span.rs  state.rs
tracy-client/tests/: loom.rs  tests.rs
tracy-sys/: Cargo.toml  README.mkd  build.rs
tracy-sys/src/: lib.rs
