[workspace]
members = [
    "tracy-client-sys",
    "tracy-client",
    "tracing-tracy",
]
resolver = "2"

[workspace.package]
authors = ["Simonas Kazlauskas <tracy-client-sys@kazlauskas.me>"]
edition = "2021"
repository = "https://github.com/nagisa/rust_tracy_client"
homepage = "https://github.com/nagisa/rust_tracy_client"
license = "MIT/Apache-2.0"
rust-version = "1.70.0"
