[package]
name = "tracy-client-sys"
version = "0.22.0" # AUTO-BUMP
authors = ["Simonas Kazlauskas <tracy-client-sys@kazlauskas.me>"]
build = "build.rs"
license = "(MIT OR Apache-2.0) AND BSD-3-Clause"
edition = "2018"
readme = "README.mkd"
repository = "https://github.com/nagisa/rust_tracy_client"
homepage = "https://github.com/nagisa/rust_tracy_client"
documentation = "https://docs.rs/tracy-client-sys"
description = """
Low level bindings to the client libraries for the Tracy profiler
"""

[[test]]
name = "tests"
path = "tests.rs"
harness = false
required-features = ["fibers"]

[dependencies]

[build-dependencies]
cc = { version = "1.0.82", default-features = false }

[features]
# Refer to FEATURES.mkd for documentation on features.
default = [ "enable", "system-tracing", "context-switch-tracing", "sampling", "code-transfer",
            "broadcast", "callstack-inlines" ]
enable = []
fibers = []
system-tracing = []
context-switch-tracing = []
sampling = []
code-transfer = []
broadcast = []
only-localhost = []
only-ipv4 = []
timer-fallback = []
ondemand = []
manual-lifetime = []
delayed-init = []
callstack-inlines = []

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "tracy_client_sys_docs"]
