[package]
name = "tracy-client"
version = "0.16.0" # AUTO-BUMP
authors = ["Simonas Kazlauskas <tracy-client@kazlauskas.me>"]
license = "MIT/Apache-2.0"
edition = "2018"
readme = "README.mkd"
repository = "https://github.com/nagisa/rust_tracy_client"
homepage = "https://github.com/nagisa/rust_tracy_client"
documentation = "https://docs.rs/tracy-client"
description = """
High level bindings to the client libraries for the Tracy profiler
"""

[[test]]
name = "tests"
path = "tests/tests.rs"
harness = false

[[test]]
name = "loom"
path = "tests/loom.rs"
harness = false

[[bench]]
name = "client"
path = "benches/client.rs"
harness = false

[dev-dependencies]
criterion = "0.3"

[dependencies]
once_cell = "1.10"

[dependencies.sys]
path = "../tracy-client-sys"
package = "tracy-client-sys"
version = ">=0.17.0, <0.22.0" # AUTO-UPDATE
default-features = false
features = ["manual-lifetime", "delayed-init"]

[target.'cfg(loom)'.dependencies.loom]
version = "0.5"

[features]
# Refer to FEATURES.mkd for documentation on features.
default = [ "enable", "system-tracing", "context-switch-tracing", "sampling", "code-transfer",
            "broadcast" ]
broadcast = ["sys/broadcast"]
code-transfer = ["sys/code-transfer"]
context-switch-tracing = ["sys/context-switch-tracing"]
enable = ["sys/enable"]
fibers = ["sys/fibers"]
timer-fallback = ["sys/timer-fallback"]
ondemand = ["sys/ondemand"]
only-ipv4 = ["sys/only-ipv4"]
only-localhost = ["sys/only-localhost"]
sampling = ["sys/sampling"]
system-tracing = ["sys/system-tracing"]

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "tracy_client_docs"]
